crates/plotnik-tests/tests/02-parser/recovery_validation/bang_negation_as_field_value.txt
Q = (pair key: !value)
------------------ DIAGNOSTICS -------------------
error: a negated grammar field cannot be a grammar-field value
 --> query.ptk:1:16
  |
1 | Q = (pair key: !value)
  |                ^^^^^^
  |
help: a negated grammar field stands alone as a child: `(node -field)`
